--- a/docker/docker-compose.yml.template
+++ b/docker/docker-compose.yml.template
@@ -6,21 +6,18 @@ services:
   {% for app in apps %}
   {{ app.name }}:
     restart: always
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile
     # Specify hostname to make it clearer which container is active when
     # using docker to get a shell in the container.
     hostname: {{ app.name }}-frontend-container
-    image: ghcr.io/ualbertaaltlab/itwewina.altlab.app:latest
     command: /app/app.sh {{ app.name }}
     ports:
       - "{{ app.port }}:3000" # http
       - "{{ app.uwsgi_stats_port }}:4141" # uWSGI stats
     volumes:
       - "./.env.{{ app.name }}:/app/.env.{{ app.name }}"
-
-      # LFS mounts
-    {% for lfs_mount in app.lfs_mounts %}
-      - "../src/{{ lfs_mount }}:/app/src/{{ lfs_mount }}:ro"
-    {% endfor %}
 
     {% for mount in app.data_mounts %}
       - "{{ mount.prod_src }}:{{ mount.target }}"
