add: frontend to app name

--- a/docker/docker-compose.yml.template
+++ b/docker/docker-compose.yml.template
@@ -4,7 +4,7 @@ version: "3"
 
 services:
   {% for app in apps %}
-  {{ app.name }}:
+  {{ app.name }}-frontend:
     restart: always
     build:
       context: ..
