--- a/crkeng/docker/docker-compose.yml
+++ b/crkeng/docker/docker-compose.yml
@@ -8,8 +8,8 @@ services:
   crkeng-frontend:
     restart: always
     build:
-      context: ..
-      dockerfile: docker/Dockerfile
+      context: ...
+      dockerfile: crkeng/docker/Dockerfile
     # Specify hostname to make it clearer which container is active when
     # using docker to get a shell in the container.
     hostname: crkeng-frontend-container
@@ -26,8 +26,8 @@ services:
   cwdeng-frontend:
     restart: always
     build:
-      context: ..
-      dockerfile: docker/Dockerfile
+      context: ...
+      dockerfile: crkeng/docker/Dockerfile
     # Specify hostname to make it clearer which container is active when
     # using docker to get a shell in the container.
     hostname: cwdeng-frontend-container
@@ -44,8 +44,8 @@ services:
   srseng-frontend:
     restart: always
     build:
-      context: ..
-      dockerfile: docker/Dockerfile
+      context: ...
+      dockerfile: crkeng/docker/Dockerfile
     # Specify hostname to make it clearer which container is active when
     # using docker to get a shell in the container.
     hostname: srseng-frontend-container
@@ -62,8 +62,8 @@ services:
   arpeng-frontend:
     restart: always
     build:
-      context: ..
-      dockerfile: docker/Dockerfile
+      context: ...
+      dockerfile: crkeng/docker/Dockerfile
     # Specify hostname to make it clearer which container is active when
     # using docker to get a shell in the container.
     hostname: arpeng-frontend-container
@@ -80,8 +80,8 @@ services:
   hdneng-frontend:
     restart: always
     build:
-      context: ..
-      dockerfile: docker/Dockerfile
+      context: ...
+      dockerfile: crkeng/docker/Dockerfile
     # Specify hostname to make it clearer which container is active when
     # using docker to get a shell in the container.
     hostname: hdneng-frontend-container
