--- a/crkeng/docker/docker-compose.yml.template
+++ b/crkeng/docker/docker-compose.yml.template
@@ -7,8 +7,8 @@ services:
   {{ app.name }}-frontend:
     restart: always
     build:
-      context: ..
-      dockerfile: docker/Dockerfile
+      context: ...
+      dockerfile: crkeng/docker/Dockerfile
     # Specify hostname to make it clearer which container is active when
     # using docker to get a shell in the container.
     hostname: {{ app.name }}-frontend-container
