--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     # Specify hostname to make it clearer which container is active when
     # using docker to get a shell in the container.
     hostname: crkeng-frontend-container
-    command: /app/app.sh crkeng
+    command: npm run start:crkeng
     ports:
       - "3000:3000" # http
       - "4000:4141" # uWSGI stats
@@ -31,7 +31,7 @@ services:
     # Specify hostname to make it clearer which container is active when
     # using docker to get a shell in the container.
     hostname: cwdeng-frontend-container
-    command: /app/app.sh cwdeng
+    command: npm run start:cwdeng
     ports:
       - "3002:3000" # http
       - "4002:4141" # uWSGI stats
@@ -49,7 +49,7 @@ services:
     # Specify hostname to make it clearer which container is active when
     # using docker to get a shell in the container.
     hostname: srseng-frontend-container
-    command: /app/app.sh srseng
+    command: npm run start:srseng
     ports:
       - "3001:3000" # http
       - "4001:4141" # uWSGI stats
@@ -67,7 +67,7 @@ services:
     # Specify hostname to make it clearer which container is active when
     # using docker to get a shell in the container.
     hostname: arpeng-frontend-container
-    command: /app/app.sh arpeng
+    command: npm run start:arpeng
     ports:
       - "3004:3000" # http
       - "4004:4141" # uWSGI stats
@@ -85,7 +85,7 @@ services:
     # Specify hostname to make it clearer which container is active when
     # using docker to get a shell in the container.
     hostname: hdneng-frontend-container
-    command: /app/app.sh hdneng
+    command: npm run start:hdneng
     ports:
       - "3003:3000" # http
       - "4003:4141" # uWSGI stats
