explicitly copy .env file for crkeng

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,34 +1,28 @@
-# pull the base image
+# referencing: https://www.pluralsight.com/guides/using-react.js-with-docker
 
+# pull the base image
 FROM node:alpine
 
-
 # set the working direction
-
 WORKDIR /app
 
-
 # add `/app/node_modules/.bin` to $PATH
-
 ENV PATH /app/node_modules/.bin:$PATH
 
 
 # install app dependencies
-
 COPY package.json ./
 
-
 COPY package-lock.json ./
-
 
 RUN npm install
 
 
 # add app
-
 COPY . ./
 
+# add .env files
+COPY .env.crkeng ./.env.crkeng
 
 # start app
-
 CMD ["npm", "run", "start:crkeng"]
