needed to send .env file to server; remove frontend from container name

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,7 +5,7 @@
 version: "3"
 
 services:
-  crkeng-frontend:
+  crkeng:
     restart: always
     build:
       context: ..
@@ -22,7 +22,7 @@ services:
       - "/data_local/application-data/crkeng/vector_models:/app/src/crkeng/resources/vector_models/"
       - "/data_local/application-data/crkeng/db:/app/src/crkeng/db/"
       - "/data_local/application-data/crkeng/search_quality:/app/src/crkeng/CreeDictionary/search_quality/"
-  cwdeng-frontend:
+  cwdeng:
     restart: always
     build:
       context: ..
@@ -39,7 +39,7 @@ services:
       - "/data_local/application-data/cwdeng/vector_models:/app/src/cwdeng/resources/vector_models/"
       - "/data_local/application-data/cwdeng/db:/app/src/cwdeng/db/"
       - "/data_local/application-data/cwdeng/search_quality:/app/src/cwdeng/CreeDictionary/search_quality/"
-  srseng-frontend:
+  srseng:
     restart: always
     build:
       context: ..
@@ -56,7 +56,7 @@ services:
       - "/data_local/application-data/srseng/vector_models:/app/src/srseng/resources/vector_models/"
       - "/data_local/application-data/srseng/db:/app/src/srseng/db/"
       - "/data_local/application-data/srseng/search_quality:/app/src/srseng/CreeDictionary/search_quality/"
-  arpeng-frontend:
+  arpeng:
     restart: always
     build:
       context: ..
@@ -73,7 +73,7 @@ services:
       - "/data_local/application-data/arpeng/vector_models:/app/src/arpeng/resources/vector_models/"
       - "/data_local/application-data/arpeng/db:/app/src/arpeng/db/"
       - "/data_local/application-data/arpeng/search_quality:/app/src/arpeng/CreeDictionary/search_quality/"
-  hdneng-frontend:
+  hdneng:
     restart: always
     build:
       context: ..
