--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,6 +6,7 @@ version: "3"
 
 services:
   crkeng:
+    restart: always
     build:
       context: ..
       dockerfile: docker/Dockerfile
@@ -22,6 +23,7 @@ services:
       - "/data_local/application-data/crkeng/db:/app/src/crkeng/db/"
       - "/data_local/application-data/crkeng/search_quality:/app/src/crkeng/CreeDictionary/search_quality/"
   cwdeng:
+    restart: always
     build:
       context: ..
       dockerfile: docker/Dockerfile
@@ -38,6 +40,7 @@ services:
       - "/data_local/application-data/cwdeng/db:/app/src/cwdeng/db/"
       - "/data_local/application-data/cwdeng/search_quality:/app/src/cwdeng/CreeDictionary/search_quality/"
   srseng:
+    restart: always
     build:
       context: ..
       dockerfile: docker/Dockerfile
@@ -54,6 +57,7 @@ services:
       - "/data_local/application-data/srseng/db:/app/src/srseng/db/"
       - "/data_local/application-data/srseng/search_quality:/app/src/srseng/CreeDictionary/search_quality/"
   arpeng:
+    restart: always
     build:
       context: ..
       dockerfile: docker/Dockerfile
@@ -70,6 +74,7 @@ services:
       - "/data_local/application-data/arpeng/db:/app/src/arpeng/db/"
       - "/data_local/application-data/arpeng/search_quality:/app/src/arpeng/CreeDictionary/search_quality/"
   hdneng:
+    restart: always
     build:
       context: ..
       dockerfile: docker/Dockerfile
