--- a/docker/docker-compose.yml.template
+++ b/docker/docker-compose.yml.template
@@ -5,6 +5,7 @@ version: "3"
 services:
   {% for app in apps %}
   {{ app.name }}:
+    restart: always
     build:
       context: ..
       dockerfile: docker/Dockerfile
