--- a/docker/docker-compose.yml.template
+++ b/docker/docker-compose.yml.template
@@ -12,6 +12,7 @@ services:
     # Specify hostname to make it clearer which container is active when
     # using docker to get a shell in the container.
     hostname: {{ app.name }}-frontend-container
+    command: /app/app.sh
     ports:
       - "{{ app.port }}:3000" # http
       - "{{ app.uwsgi_stats_port }}:4141" # uWSGI stats
