--- a/crkeng/docker/docker-compose.yml
+++ b/crkeng/docker/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   crkeng:
     restart: always
     build:
-      context: ...
+      context: ../../
       dockerfile: crkeng/docker/Dockerfile
     # Specify hostname to make it clearer which container is active when
     # using docker to get a shell in the container.
