--- a/srseng/docker/docker-compose.yml
+++ b/srseng/docker/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   srseng:
     restart: always
     build:
-      context: ...
+      context: ../../
       dockerfile: srseng/docker/Dockerfile
     # Specify hostname to make it clearer which container is active when
     # using docker to get a shell in the container.
