--- a/crkeng/docker/docker-compose.yml
+++ b/crkeng/docker/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     restart: always
     build:
       context: ../../
-      dockerfile: crkeng/docker/Dockerfile
+      dockerfile: Dockerfile-tmp
     # Specify hostname to make it clearer which container is active when
     # using docker to get a shell in the container.
     hostname: crkeng-frontend-container
