--- a/srseng/docker/docker-compose.yml
+++ b/srseng/docker/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     restart: always
     build:
       context: ../../
-      dockerfile: srseng/docker/Dockerfile
+      dockerfile: Dockerfile-tmp
     # Specify hostname to make it clearer which container is active when
     # using docker to get a shell in the container.
     hostname: srseng-frontend-container
