--- a/srseng/docker/docker-compose.yml
+++ b/srseng/docker/docker-compose.yml
@@ -13,14 +13,10 @@ services:
     # Specify hostname to make it clearer which container is active when
     # using docker to get a shell in the container.
     hostname: srseng-frontend-container
-    command: python keep_alive.py
+    command: npm run start:srseng
     ports:
       - "3001:3000" # http
       - "4001:4141" # uWSGI stats
     volumes:
       - "../../.env.srseng:/app/.env.srseng"
-
-      - "/data_local/application-data/srseng/vector_models:/app/src/srseng/resources/vector_models/"
-      - "/data_local/application-data/srseng/db:/app/src/srseng/db/"
-      - "/data_local/application-data/srseng/search_quality:/app/src/srseng/CreeDictionary/search_quality/"
 
