add: morphodict user to docker container

--- a/crkeng/docker/Dockerfile
+++ b/crkeng/docker/Dockerfile
@@ -23,6 +23,9 @@ ARG NODE_VERSION=v12.20.2
 WORKDIR /tmp
 
 # Create the non-root user/group that will own the application code
+RUN groupadd --gid ${MORPHODICT_UID_GID} morphodict \
+ && useradd --no-log-init --gid morphodict \
+    --uid ${MORPHODICT_UID_GID} morphodict --create-home
 #RUN groupadd --gid ${MORPHODICT_UID_GID} morphodict \
 # && useradd --no-log-init --gid morphodict \
 #    --uid ${MORPHODICT_UID_GID} morphodict --create-home
