--- a/srseng/docker/Dockerfile
+++ b/srseng/docker/Dockerfile
@@ -21,6 +21,10 @@ ARG MORPHODICT_UID_GID=60006
 ARG NODE_VERSION=v12.20.2
 
 WORKDIR /tmp
+ADD https://nodejs.org/dist/${NODE_VERSION}/node-${NODE_VERSION}-linux-x64.tar.gz /tmp/node.tar.gz
+RUN tar xf node.tar.gz \
+ && mv node-${NODE_VERSION}-linux-x64 /opt/node
+ENV PATH="/opt/node/bin:${PATH}"
 
 # Create the non-root user/group that will own the application code
 RUN groupadd --gid ${MORPHODICT_UID_GID} morphodict \
