--- a/crkeng/docker/docker-compose.yml
+++ b/crkeng/docker/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     # Specify hostname to make it clearer which container is active when
     # using docker to get a shell in the container.
     hostname: crkeng-frontend-container
+    command: /app/app.sh
     ports:
       - "3000:3000" # http
       - "4000:4141" # uWSGI stats
