copy working deploy process to srseng

--- a/srseng/docker/docker-compose.yml
+++ b/srseng/docker/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     # Specify hostname to make it clearer which container is active when
     # using docker to get a shell in the container.
     hostname: srseng-frontend-container
+    command: /app/app.sh
     ports:
       - "3001:3000" # http
       - "4001:4141" # uWSGI stats
