--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-query": "^3.34.16",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.13.8",
     "reactstrap": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
